# nvidia-variant-provider

./: .gitmodules  .pre-commit-config.yaml  .spdx-ignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: index.html
docs/nvidia-variant-provider/: index.html  nvidia_variant_provider-0.0.1-py3-none-any.whl  nvidia_variant_provider-0.0.2-py3-none-any.whl
nvidia_variant_provider/: __init__.py  detect_cuda.py  plugin.py  pynvml.py  version_sort.py
tests/: test_plugin_basic.py
toolshed/: check_spdx.py
