[build-system]
requires = [ "flit_core >=3.11,<4" ]
build-backend = "flit_core.buildapi"

[project]
name = "nvidia-variant-provider"
version = "0.0.1"
description = "A Variant Provider Plugin for the `nvidia` namespace"
dependencies = [ "packaging", "variantlib" ]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" },
    { name = "Michael Sarahan", email = "msarahan@nvidia.com" },
]
maintainers = [
    { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" },
    { name = "Michael Sarahan", email = "msarahan@nvidia.com" },
]


[project.entry-points.variant_plugins]
nvidia_variant_provider = "nvidia_variant_provider.plugin:NvidiaVariantPlugin"
